<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>

    <!-- applet -->
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>

    <!-- verify -->
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>

    <!-- format -->
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    
    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="app_name">SDKSample</string>
	<string name="app_share">分享</string>
    
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="goto_pay">跳转到支付界面</string>
    <string name="goto_fav">跳转到收藏界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    
    <string name="send_to_wx_title">发送到微信</string>
	<string name="get_from_wx_title">从微信接收</string>
	<string name="show_from_wx_title">显示微信请求的消息</string>
	<string name="pay_by_wx_title">通过微信支付</string>
	
	<string name="errcode_success">发送成功</string>
	<string name="errcode_cancel">发送取消</string>
	<string name="errcode_deny">发送被拒绝</string>
	<string name="errcode_unknown">发送返回</string>
	
	<string name="launch_from_wx">Launch From Weixin</string>
	
    <!-- WXMediaMessage -->
	<string name="input_openid">输入openid</string>
	<string name="input_scope">输入scope</string>
	
	<string name="send">发送到微信</string>
	<string name="receive">从微信接收</string>
	
	<string name="is_timeline">是否分享到朋友圈</string>
	<string name="send_text">发送文本</string>
	<string name="send_text_default">这段文字发送自微信SDK示例程序</string>
	
	<string name="send_img">发送图片</string>
	<string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>
	<string name="send_img_file_not_exist">文件不存在</string>
	
	<string name="send_file">发送文件</string>
	<string-array name="send_file_item">
        <item>发送文件的二进制数据</item>
        <item>发送文件的本地路径</item>
    </string-array>
    <string name="send_file_file_not_exist">文件不存在</string>
	
	<string name="send_pic">发送照片</string>
	
	<string name="send_music">发送音乐</string>
	<string-array name="send_music_item">
	    <item>发送音乐url</item>
	    <item>发送低带宽音乐url</item>
	</string-array>

	<string name="send_video">发送视频</string>
	<string-array name="send_video_item">
	    <item>发送视频url</item>
	    <item>发送低带宽视频url</item>
	</string-array>
	
	<string name="send_webpage">发送网页</string>
	<string-array name="send_webpage_item">
	    <item>发送网页url</item>
	</string-array>

	<string name="send_appdata">发送app消息</string>
	<string-array name="send_appdata_item">
	    <item>发送app文件本地路径</item>
	    <item>发送app二进制数据</item>
	    <item>发送无附件的app</item>
	</string-array>
	
	<string name="send_emoji">发送表情消息</string>
	<string-array name="send_emoji_item">
	    <item>发送表情本地路径</item>
	    <item>发送表情二进制数据</item>
	</string-array>
	
	<string-array name="send_emoji_item_format">
	    <item>发送GIF图片</item>
	    <item>发送非GIF图片</item>
	</string-array>
	
	<!-- GetFromWXActivity -->
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>
    
    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>
    
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    
	<!-- PayActivity -->
	<string name="pay_by_wx">客户端签名微信支付</string>
	<string name="pay_by_wxap">服务器端签名微信支付</string>
	<string name="check_pay">检查微信版本是否支持支付</string>
	<string name="input_reqkey">输入reqkey</string>
	<string name="input_package_value">输入package value</string>
	<string name="input_sign">输入sign</string>
	<string name="getting_access_token">正在获取access token...</string>
	<string name="get_access_token_succ">获取access token成功</string>
	<string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
	<string name="getting_prepayid">正在获取预支付订单...</string>
	<string name="paying">支付中</string>
	<string name="get_prepayid_succ">获取prepayid成功</string>
	<string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    
	<!-- WXPayEntryActivity -->
	<string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
	<string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
	    <!--百度-->
	<string name="please_speak">请说话</string>
	<string name="speaking">说话中</string>
	<string name="cancel">取消</string>
	<string name="start">开始</string>
	<string name="setting">设置</string>


	<string name="infile_default"></string>
	<string-array name="infile_list">
		<item>@string/infile_default</item>
		<item>res:///com/baidu/android/voicedemo/8k_test.pcm, 8k采样的测试音频</item>
		<item>res:///com/baidu/android/voicedemo/16k_test.pcm, 16k采样的测试音频</item>
	</string-array>

	<string name="sample_default"></string>
	<string-array name="sample_list">
		<item>@string/sample_default</item>
		<item>8000, 适用于2G或3G网络</item>
		<item>16000, 适用于4G或WIFI网络</item>
	</string-array>

	<string name="language_default"></string>
	<string-array name="language">
		<item>@string/language_default</item>
		<item>cmn-Hans-CN, 普通话(中国)</item>
		<item>sichuan-Hans-CN, 四川(中国)</item>
		<item>yue-Hans-CN, 粤语(中国)</item>
		<item>en-GB, 英语(美国)</item>
	</string-array>
	<string name="nlu_default">enable, 开启语义解析</string>
	<string-array name="nlu_list">
		<item>enable, 开启语义解析</item>
		<item>disable, 禁用语义解析</item>
	</string-array>

	<string name="vad_default"></string>
	<string-array name="vad_list">
		<item>@string/vad_default</item>
		<item>search, 适用输入搜索关键字(默认值)</item>
		<item>input, 适用于输入短信、微博等长句输入</item>
	</string-array>
	<string name="prop_default"></string>
	<string-array name="prop_tpye">
		<item>@string/prop_default</item>
		<item>20000, 输入</item>
		<item>10005, 热词</item>
		<item>10060, 地图</item>
		<item>10001, 音乐</item>
		<item>10002, 视频</item>
		<item>10003, 应用</item>
		<item>10004, 网页</item>
		<item>10007, 健康</item>
		<item>10006, 购物</item>
		<item>10008, 打电话</item>
		<item>10008, 超级电话</item>
		<item>10052, 医疗</item>
		<item>10053, 汽车</item>
		<item>10054, 娱乐餐饮</item>
		<item>10055, 财经</item>
		<item>10056, 游戏</item>
		<item>10057, 菜谱</item>
		<item>10058, 助手</item>
		<item>100014, 联系人</item>
		<item>100016, 手机设置</item>
		<item>100018, 电视指令</item>
		<item>100019, 播放器指令</item>
		<item>100020, 收音机指令</item>
		<item>100021, 命令词</item>
	</string-array>
</resources>